{
  "version": 4,
  "terraform_version": "0.12.9",
  "serial": 2363,
  "lineage": "b5ab96be-3510-312f-0eb5-4efb405c46a4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:767167112715:loadbalancer/app/erp-alb/cb1b683f5dbea5dc",
            "arn_suffix": "app/erp-alb/cb1b683f5dbea5dc",
            "dns_name": "erp-alb-244117111.us-east-2.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:767167112715:loadbalancer/app/erp-alb/cb1b683f5dbea5dc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "erp-alb",
            "security_groups": [
              "sg-0aa9d6b7040cf537d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06110dcd9f26480ba"
              },
              {
                "subnet_id": "subnet-0d072b610d7b49151"
              }
            ],
            "subnets": [
              "subnet-06110dcd9f26480ba",
              "subnet-0d072b610d7b49151"
            ],
            "vpc_id": "vpc-003a0cfd31e3533e5",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "depends_on": [
            "aws_security_group.alb",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:767167112715:listener/app/erp-alb/cb1b683f5dbea5dc/4c8f0eeaafc63a74",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:767167112715:targetgroup/app-alb/52de8bfe2401fef3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:767167112715:listener/app/erp-alb/cb1b683f5dbea5dc/4c8f0eeaafc63a74",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:767167112715:loadbalancer/app/erp-alb/cb1b683f5dbea5dc",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_alb.main",
            "aws_alb_target_group.app_alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "app_alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:767167112715:targetgroup/app-alb/52de8bfe2401fef3",
            "arn_suffix": "targetgroup/app-alb/52de8bfe2401fef3",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/erp/ui",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:767167112715:targetgroup/app-alb/52de8bfe2401fef3",
            "lambda_multi_value_headers_enabled": false,
            "name": "app-alb",
            "port": 5000,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-003a0cfd31e3533e5"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "gw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-03ee0eb9a61e08c93",
            "domain": "vpc",
            "id": "eipalloc-06b0c36609c62eee8",
            "network_interface": "eni-0d040e4492f671b66",
            "private_dns": "ip-172-17-2-174.us-east-2.compute.internal",
            "private_ip": "172.17.2.174",
            "public_dns": "ec2-3-135-33-122.us-east-2.compute.amazonaws.com",
            "public_ip": "3.135.33.122",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_internet_gateway.gw"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0d274d7e26e2c7085",
            "domain": "vpc",
            "id": "eipalloc-0fd81b79fb61d11a0",
            "network_interface": "eni-00fce0d5c535e40fd",
            "private_dns": "ip-172-17-3-13.us-east-2.compute.internal",
            "private_ip": "172.17.3.13",
            "public_dns": "ec2-3-136-107-191.us-east-2.compute.amazonaws.com",
            "public_ip": "3.136.107.191",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_internet_gateway.gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0f444e2e5c596a9fb",
            "owner_id": "767167112715",
            "vpc_id": "vpc-003a0cfd31e3533e5"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06b0c36609c62eee8",
            "id": "nat-0c9c45b5e78c7e5cc",
            "network_interface_id": "eni-0d040e4492f671b66",
            "private_ip": "172.17.2.174",
            "public_ip": "3.135.33.122",
            "subnet_id": "subnet-06110dcd9f26480ba"
          },
          "depends_on": [
            "aws_eip.gw",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fd81b79fb61d11a0",
            "id": "nat-08d97561a010630da",
            "network_interface_id": "eni-00fce0d5c535e40fd",
            "private_ip": "172.17.3.13",
            "public_ip": "3.136.107.191",
            "subnet_id": "subnet-0d072b610d7b49151"
          },
          "depends_on": [
            "aws_eip.gw",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f444e2e5c596a9fb",
            "id": "r-rtb-04b07845db9e7bb871080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04b07845db9e7bb87",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-070d696b78f17b247",
            "owner_id": "767167112715",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0c9c45b5e78c7e5cc",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-003a0cfd31e3533e5"
          },
          "depends_on": [
            "aws_nat_gateway.gw",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b15a0340549d2d4c",
            "owner_id": "767167112715",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-08d97561a010630da",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-003a0cfd31e3533e5"
          },
          "depends_on": [
            "aws_nat_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079b834518177d747",
            "route_table_id": "rtb-070d696b78f17b247",
            "subnet_id": "subnet-0826e1566fcb37c01"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e0602e78da0c8e3",
            "route_table_id": "rtb-0b15a0340549d2d4c",
            "subnet_id": "subnet-0df27800684c1acea"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767167112715:security-group/sg-0aa9d6b7040cf537d",
            "description": "Allow access on port 80/443 only to ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aa9d6b7040cf537d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": null,
            "owner_id": "767167112715",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-003a0cfd31e3533e5"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767167112715:security-group/sg-08815e13cc0d75611",
            "description": "allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08815e13cc0d75611",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0aa9d6b7040cf537d"
                ],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "ecs-sg",
            "name_prefix": null,
            "owner_id": "767167112715",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-003a0cfd31e3533e5"
          },
          "depends_on": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767167112715:security-group/sg-04a1ac08c52999639",
            "description": "allow inbound access from the app tasks only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04a1ac08c52999639",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08815e13cc0d75611"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds-sg",
            "name_prefix": null,
            "owner_id": "767167112715",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-003a0cfd31e3533e5"
          },
          "depends_on": [
            "aws_security_group.ecs",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767167112715:subnet/subnet-0826e1566fcb37c01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.17.0.0/24",
            "id": "subnet-0826e1566fcb37c01",
            "map_public_ip_on_launch": false,
            "owner_id": "767167112715",
            "vpc_id": "vpc-003a0cfd31e3533e5"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767167112715:subnet/subnet-0df27800684c1acea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.17.1.0/24",
            "id": "subnet-0df27800684c1acea",
            "map_public_ip_on_launch": false,
            "owner_id": "767167112715",
            "vpc_id": "vpc-003a0cfd31e3533e5"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767167112715:subnet/subnet-06110dcd9f26480ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.17.2.0/24",
            "id": "subnet-06110dcd9f26480ba",
            "map_public_ip_on_launch": true,
            "owner_id": "767167112715",
            "vpc_id": "vpc-003a0cfd31e3533e5"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767167112715:subnet/subnet-0d072b610d7b49151",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.17.3.0/24",
            "id": "subnet-0d072b610d7b49151",
            "map_public_ip_on_launch": true,
            "owner_id": "767167112715",
            "vpc_id": "vpc-003a0cfd31e3533e5"
          },
          "depends_on": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767167112715:vpc/vpc-003a0cfd31e3533e5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.0.0/16",
            "default_network_acl_id": "acl-0bc0ac85333eb5b2d",
            "default_route_table_id": "rtb-04b07845db9e7bb87",
            "default_security_group_id": "sg-0f6acdaa1ba0ec263",
            "dhcp_options_id": "dopt-1ab57971",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-003a0cfd31e3533e5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04b07845db9e7bb87",
            "owner_id": "767167112715"
          }
        }
      ]
    }
  ]
}